# movie-rust

./: .dockerignore  .gitignore  Dockerfile  EmbyAPI_Compatibility_Report.md  EmbyAPI_Compatibility_Report_8b2c503_20260420_202905.md  LOGS_README.md  Makefile  README.md  TESTING_NEW_FEATURES.md  docker-compose.yml  emby_api_diff.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0001_schema.sql  0002_jellyfin_fields.sql  0003_system_settings.sql  0004_library_options.sql  0005_media_streams.sql  0006_persons_and_roles.sql  0007_user_policy.sql  0008_sessions_expires_at.sql  0009_add_bitrate_to_media_items.sql  0009_sessions_session_type.sql  0010_emby_item_metadata.sql  0011_media_stream_emby_fields.sql  0012_user_configuration.sql  0013_emby_taglines.sql  0014_series_status_fields.sql  0015_user_image_fields.sql  0016_series_episode_catalog.sql  0017_media_items_critic_rating.sql  0018_session_play_queue.sql  0019_display_preferences.sql  0020_session_command_consumption.sql  0021_collection_items.sql  0021_users_easy_password.sql  0022_emby_images_and_trailers.sql  0022_media_chapters.sql  0022_scanner_idempotency.sql  0023_user_configuration_compat.sql
backend/src/: auth.rs  config.rs  error.rs  file_watcher.rs  http_client.rs  main.rs  media_analyzer.rs  models.rs  naming.rs  refresh_queue.rs  remote_emby.rs  repo_cache.rs  repository.rs  scanner.rs  security.rs  state.rs  transcoder.rs  username.rs  webhooks.rs  work_limiter.rs
backend/src/metadata/: mod.rs  models.rs  nfo_writer.rs  opensubtitles.rs  person_service.rs  provider.rs  tmdb.rs  translator.rs
backend/src/routes/: admin.rs  client_compat.rs  collections.rs  compat.rs  connect.rs  dashboard.rs  devices.rs  features.rs  genres.rs  images.rs  integrations.rs  items.rs  live_streams.rs  livetv.rs  management.rs  media_segments.rs  metadata_routes.rs  misc.rs  mod.rs  persons.rs  playlists.rs  remote_emby.rs  scheduled_tasks.rs  sessions.rs  shows.rs  startup.rs  system.rs  translation.rs  trickplay.rs  usage_stats.rs  users.rs  videos.rs  webhooks.rs  websocket.rs
backend/target_audit_run/: .rustc_info.json
deploy/: nginx-openresty-reverse-proxy.example.conf
docker/: entrypoint.sh  nginx.conf
docs/: API_COMPAT.md  JELLYFIN_FRONTEND_PARITY.md
frontend/: Dockerfile  MediaBrowser.WebDashboard.csproj  components.d.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+118 files in other folders)
