[package]
name = "movie-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
mime_guess = "2.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "signal", "process"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip", "compression-br"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4", "v5"] }
walkdir = "2.5"
reqwest = { version = "0.12", features = ["stream", "json"] }
num_cpus = "1.17.0"
blurhash = "0.2.3"
image = "0.25.10"
tempfile = "3.27.0"
tokio-util = "0.7.18"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
form_urlencoded = "1"
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
bytes = "1"
notify = "7"
futures = "0.3"
